Refactored response to new format for calculate, changed tests accordingly